# grsync

./: Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.in  grsync-maemo-ui.xml  grsync.desktop.in  grsync.glade  grsync.spec  it.opbyte.grsync.service
debian/: changelog  control  files  grsync.menu  grsync.substvars
debian/grsync/DEBIAN/: control  md5sums
debian/grsync/usr/share/locale/ca/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/cs/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/de/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/gl/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/hu/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/id/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/nl/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/pt/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/ru/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/zh/LC_MESSAGES/: grsync.mo
debian/grsync/usr/share/locale/zh/zh_TW/LC_MESSAGES/: grsync.mo
debian/patches/: add-trailing-slash.diff  series
po/: Makefile  Makefile.in  POTFILES  POTFILES.skip  ca_ES.po  cs_CZ.po  de_DE.po  es_ES.gmo  es_ES.po  fr_FR.gmo  fr_FR.po  gl_ES.po  grsync.pot  hr_HR.gmo  hr_HR.po  hu_HU.po  id_ID.po  it_IT.gmo  it_IT.po  nb_NO.gmo  nb_NO.po  nl_NL.po  pt_BR.po  ru_RU.po  sv_SE.gmo  sv_SE.po  tr_TR.gmo  tr_TR.po  zh_CN.po  zh_TW.po
src/: Makefile  Makefile.in  callbacks.c  callbacks.h  grsync  main.c
